Checked 'Scroll on keystroke' should have no effect when 'Read-Only' is selected
Hello!
When I select 'Read-Only' from the context menu and and scrolls above to start reading something, a keystroke (though not visible on terminal) scrolls the screen to command line. 'Read-Only' should not only not print the characters on the terminal but should ignore the keystrokes altogether in true read-only spirit.
A primitive version of this can be achieved by disabling 'Scroll on keystroke' when 'Read-Only' is selected so that the screen doesn't scroll in read-only mode on keystroke. Not sure how to completely ignore the keystroke.
Thanks!