widget: Don't scroll to bottom on keystroke in read-only mode

https://gitlab.gnome.org/GNOME/gnome-terminal/issues/159
(cherry picked from commit 016fd4690b85011b5691ff39ae269ad912a7e69e)